--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -28,6 +28,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8da08b65-4787-4b02-b14b-f2024d321d1b",
+   "metadata": {},
+   "source": [
+    "### 6.1 Introduction to Eigencalues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cc19aace-c8b5-4d4c-9e97-2dfb89ce81b1",
    "metadata": {},
    "source": [
@@ -131,6 +139,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9145a60d-9c2e-4378-9bb5-cc5a5d052039",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6585e669-01fe-40f5-86fb-07ba659577c8",
    "metadata": {},
    "source": [
@@ -177,6 +193,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93293487-ed27-4852-bf01-a77dc7daa1f1",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "761e7a1d-4840-46bc-9044-0e540b215800",
    "metadata": {},
    "source": [
@@ -216,6 +240,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "99d93ff3-5f27-49b3-a7b3-5a58a908cbd4",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dc7c2ed-ba5f-4c36-8455-c74c0f00c983",
+   "metadata": {},
+   "source": [
+    "#### The Equation for the Eigenvalues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ec3091f-2ca7-4080-9f38-38027db9fc38",
    "metadata": {},
    "source": [
@@ -245,6 +285,14 @@
    "metadata": {},
    "source": [
     "> For each elgenvalue $\\lambda$ solve $(A - \\lambda I)x = 0$ or $A_x=\\lambda x$ to find an eigenvector x."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b1a901a-f051-42bd-976f-2761e346d6dd",
+   "metadata": {},
+   "source": [
+    "-----------------------"
    ]
   },
   {
@@ -283,42 +331,193 @@
     "- $det\\begin{bmatrix}{1-\\lambda}&{2}\\\\{2}&{4-\\lambda} \\end{bmatrix}=(1-\\lambda)(4-\\lambda)-(2)(2)=\\lambda^{2}-5\\lambda$\n",
     "- $\\lambda^{2}-5\\lambda$를 0으로 놓으면 근은 람다가 0 또는 5\n",
     "- One solution is $\\lambda = 0$ (as expected, since A is singular). Factoring into $\\lambda$ times $\\lambda - 5$, the other root is $\\lambda = 5$.:\n",
-    "- $det(a$"
+    "- $det(A-\\lambda I)=\\lambda^2-5\\lambda =0$ yields the eigenvalues $\\lambda_1=0$ and $\\lambda_2=5$\n",
+    "- 고유벡터를 찾아보자\n",
+    "- $(A-0I)x=\\begin{bmatrix}{1}&{2}\\\\{2}&{4} \\end{bmatrix}\\begin{bmatrix}{y}\\\\{z} \\end{bmatrix}=\\begin{bmatrix}{0}\\\\{0} \\end{bmatrix}$ yields the eigenvector $\\begin{bmatrix}{y}\\\\{z} \\end{bmatrix}=\\begin{bmatrix}{2}\\\\{-1} \\end{bmatrix}$ for $\\lambda_1=0$\n",
+    "- $(A-5I)x=\\begin{bmatrix}{-4}&{2}\\\\{2}&{-1} \\end{bmatrix}\\begin{bmatrix}{y}\\\\{z} \\end{bmatrix}=\\begin{bmatrix}{0}\\\\{0} \\end{bmatrix}$ yields the eigenvector $\\begin{bmatrix}{y}\\\\{z} \\end{bmatrix}=\\begin{bmatrix}{1}\\\\{2} \\end{bmatrix}$ for $\\lambda_2=5$.\n",
+    "    - 0과 5가 고유값이기 때문에 $A-0I$, $A-5I$는 singular이다.\n",
+    "    - 고유벡터 (2,-1)과 (1,2)은 영공간nullspace에 있다.: $(A-\\lambda I)x=0$ is $Ax=\\lambda x$"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1d300315-c521-425a-be06-1e08b0eb416b",
    "metadata": {},
-   "source": []
+   "source": [
+    "> warning: There is nothing exceptional about A = O. Like every other number, zero might be an eigenvalue and it might not. If A is singular, it is. The eigenvectors fill the nullspace: Ax = Ox = O. **If A is invertible, zero is not an eigenvalue. We shift A by a multiple of I to make it singular.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab0c079-eadd-482f-a494-1b3caa5cb590",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "21994773-83ce-464e-a968-1511bb66d758",
    "metadata": {},
-   "source": []
+   "source": [
+    "summary: n matrix에 의한 고유값 문제를 해결하기 위해 밟을 step!\n",
+    "1. Compute the determinant of $A-\\lambda I$.\n",
+    "2. Find the roots of this polynomial\n",
+    "3. solve $(A-\\lambda I)x=0$ to find an eigenvector $x$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e473e68d-f1e5-42d3-9797-4d3c48d6d07b",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c074269c-7030-4191-ac24-e963f5cf3fcb",
+   "metadata": {},
+   "source": [
+    "> warning: Some 2 by 2 matrices have only one line of eigenvectors. This can only happen when two eigenvalues are equal. *Similarly some n by n matrices don't have n independent eigenvectors. Without n eigenvectors, we don't have a basis. We can't write every v as a combination of eigenvectors.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d6ff7b9-72e0-4007-9855-f4b1b9cade4f",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8029e1f1-c297-4794-8ad0-e1b6f5ae5a1f",
+   "metadata": {},
+   "source": [
+    "#### Good News, Bad News"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "bf3c808e-c2b6-4bb9-bed4-b5c3fb65d2c7",
    "metadata": {},
-   "source": []
+   "source": [
+    "Bad news: A 행에 또다른 열을 추가하거나 행을 바꾼다면 고유값들은 항상 변할 것임!\n",
+    "- Elimination does not preserve the A'S. The triangular U has its eigenvalues sitting along the diagonal-they are the pivots. But they are not the eigenvalues of A!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "01368500-a26a-4c93-b8b6-5e87f201ac60",
    "metadata": {},
-   "source": []
+   "source": [
+    "Good news: The product $\\lambda_1$ times $\\lambda_2$ and the sum $\\lambda_1$ + $\\lambda_2$ can be found quickly from the matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14c87014-9350-4039-8acb-bd985dc5bd79",
+   "metadata": {},
+   "source": [
+    "**The product of the n eigenvalues equals the determinant. The sum of the n eigenvalues equals the sum of the n diagonal entries.**\n",
+    "- The sum of the entries on the main diagonal is called the trace of A:\n",
+    "    - $\\lambda_1+\\lambda_2+\\dots+\\lambda_n=trace=a_{11}+a_{22}+\\dots+a_{nn}$\n",
+    "    - 계산을 잘못했는지 알 수 있음! 잘못되었다면? go back to $det(A-\\lambda I)=0$\n",
+    "- The determinant test makes the product of the A'S equal to the product of the pivots (assuming no row exchanges). But the sum of the A'S is not the sum of the pivots-as the example showed. The individual A's have almost nothing to do with the pivots. In this new part of linear algebra, the key equation is really nonlinear: A multiplies x."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c0db0d0-bca9-4161-9385-34b94e4f5f88",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "db2775e1-7def-4581-b755-17123a236cce",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Imaginary Eigenvalues"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fb07d3d4-ecb3-4f51-823b-57f77c738d66",
+   "metadata": {},
+   "source": [
+    " The eigenvalues might not be real numbers.?!?!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bbb7210-4f1e-480a-919f-d6b90d62cfe5",
+   "metadata": {},
+   "source": [
+    "##### ex5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "791f44de-e9ad-499c-93f7-217cf71e04a7",
+   "metadata": {},
+   "source": [
+    "**The $90^o$ rotation $Q=\\begin{bmatrix}{0}&{-1}\\\\{1}&{0} \\end{bmatrix}$ has no real eigenvectors. Its eigenvalues are $\\lambda=i$ and $\\lambda=-i$. Sum of $\\lambda$'s= trace=0, Product=determinany=1.**\n",
+    "- rotation 후 $Q_x$ 어느 벡터도 x와 같은 방향에 있지 않음 x=0일때 빼고.\n",
+    "- 그러면 고유벡터가 될 수 없는데 그래도 우리는 허수imaginary numbers로 보겠다.\n",
+    "- $-I$인 $Q^2$을 봐봐. 만약 Q가 90도 회전하면 $Q^2$은 180도 회전하겠지? 그건 고유값들이 -1과 -1이라는 거고.(확실히 $-IX=-1X$인 건 아니까.) $Q^2$이니까 각 $\\lambda ^2$이 될거고. 우리는 $\\lambda ^2=-1$을 얻게될거야. 그러면 근은 $i,-i$가 나오겠지. 우리는 허수 i가 고유벡터에 있다는 것을 알 수 있어.\n",
+    "    - $\\begin{matrix}  complex \\\\  eigenvectors \\end{matrix}$   $\\begin{bmatrix}{0}&{-1}\\\\{1}&{0} \\end{bmatrix}\\begin{bmatrix}{1}\\\\{i} \\end{bmatrix}=-i\\begin{bmatrix}{1}\\\\{i} \\end{bmatrix}$ and $\\begin{bmatrix}{0}&{-1}\\\\{1}&{0} \\end{bmatrix}\\begin{bmatrix}{i}\\\\{1} \\end{bmatrix}=i\\begin{bmatrix}{i}\\\\{1} \\end{bmatrix}$\n",
+    "    - 여기서 복소수벡터complex vector $x_1=(1,i),x_2=(i,1)$는 회전한 방향을 유지하지. \n",
+    "    - 이 예제들은 실제 행렬이 복소수 고유치들과 고유값들을 쉽게 가질 수 있는 모든 중요한 포인트를 만들지.\n",
+    "    - 특히 고유치 i와 -i는 Q의 two special properties을 말해.\n",
+    "    1. \n",
+    "    2.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e544238-a5a4-4adb-8917-d25648be0f6d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfdda7f1-816a-4518-8b45-d23b51434417",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eae13c7-b2af-40be-89d8-faaade715f4d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4d97fa-d4ca-4bf0-872f-4487451f590c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c724c7-e97b-4afd-9f39-68a6a920180d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcc60d03-956b-4f8c-858b-ddbf0e810935",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf507732-aef3-408d-b3ce-998f20388e5c",
    "metadata": {},
    "source": []
   }
