--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -499,25 +499,270 @@
    "id": "3eae13c7-b2af-40be-89d8-faaade715f4d",
    "metadata": {},
    "source": [
-    "The eigenvalue A is the length of $A_x$ , when the unit eigenvector x lines up. The built-in \n",
-    "choices for A illustrate three possibilities: 0,1, or 2 directions where Ax crosses x. "
+    "The eigenvalue A is the length of $Ax$ , when the unit eigenvector x lines up. The built-in \n",
+    "choices for A illustrate three possibilities: 0,1, or 2 directions where $A_x$ crosses x. \n",
+    "- **0**: 실제 고유벡터가 없음. $Ax$가 x의 뒤 혹은 앞에 있음. 이건 고유값과 고유벡터들이 rotation Q에서 복소수라는 것을 의미함.\n",
+    "- **1**: 고유벡터들의 오직 한 line만이 존재. Ax와 x는 움직이는 방향에서 만나긴 하는데 교차하진 않음.(2$\\times$2행렬에서)\n",
+    "- **2**: 두 독립적인 방향의 고유벡터가 있음. This is typica! Ax는 x와 첫번째 고유벡터 $x_1$에서 교차하고, 두번째 고유벡터 $x_2$에서 다시 돌아옴(cross back). 그러면 Ax와 x는 $-x_1$과 $-x_2$에서 다시 교차함."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b20b282-2ab9-43e5-9c2f-47a5dc350158",
+   "metadata": {},
+   "source": [
+    "-----------------------"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "fd4d97fa-d4ca-4bf0-872f-4487451f590c",
    "metadata": {},
-   "source": []
+   "source": [
+    "***REVIEW OF THE KEY IDEAS***\n",
+    "1. $Ax = \\lambda x$ says that **eigenvectors x keep the same direction** when multiplied by A. \n",
+    "2. $Ax = \\lambda x$ also says that **$det(A - \\lambda I) = 0$**. This determines **n eigenvalues**. \n",
+    "3. **The eigenvalues of $A^2$ and $A^{-1}$ are $\\lambda^2$ and $\\lambda^{-1}$**, with the **same eigenvectors**. \n",
+    "4. **The sum of the A'S equals the sum down the main diagonal of A (the trace). The product of the A'S equals the determinant**. \n",
+    "5. **Projections $P$, reflections $R$, $90^o$ rotations $Q$** have special eigenvalues $1,0, -1, i, -i$. **Singular matrices** have $\\lambda = O$. **Triangular matrices** have A'S on their diagonal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8227dc67-d077-4bd6-a99a-548d62f6d933",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "40c724c7-e97b-4afd-9f39-68a6a920180d",
    "metadata": {},
-   "source": []
+   "source": [
+    "***WORKED EXAMPLES***"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "cf507732-aef3-408d-b3ce-998f20388e5c",
+   "metadata": {},
+   "source": [
+    "6.1.A 다 끝내고 시간 나면 할 것,,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcd40e46-9a7a-464a-a85b-b7362fc9082f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a32c5ed-5398-4a57-b1b4-169b8733397f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc62263-1376-4f68-8ae9-915fffc7c606",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe8f483-bca2-4317-aa7a-6c59d2ccac20",
+   "metadata": {},
+   "source": [
+    "### 6.2 Diagonalizing a Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e083e79f-77d6-4c4d-bb0f-20ef9f5e77a1",
+   "metadata": {},
+   "source": [
+    "**Does the matrix A turn into a diagonal matrix A when we use the eigenvectors properly?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77dae704-0612-4883-9f24-32bc0b07e52b",
+   "metadata": {},
+   "source": [
+    "Diagonalization: Suppose the n by n matrix A has n linearly independent eigervectors $x_1,\\dots,x_n$. Put them into the columns of an eigenvectors matrix S. Then $S^{-1}AS$ is tje eigenvalue matrix $\\Lambda$\n",
+    "- Eigenvector matrix S, Eigenvalue matrix $\\Lambda$, $S^{-1}AS=\\Lambda=\\begin{bmatrix}{\\lambda_1}&{}&{}\\\\{}&{\\ddots}&{}\\\\{}&{}&{\\lambda_n}\\end{bmatrix}$\n",
+    "- i.e. $AS=S\\Lambda$ is $S^{-1}AS=\\Lambda$ or $A=SAS^{-1}$\n",
+    "- 행렬 S는 역을 취할 수 있기 때문에 그 열들은 선형적으로 독립이 될 수 있다. n개의 독립적인 고유벡터 없이 대각선화 할 수 없다.\n",
+    "- $A$와 $\\Lambda$는 같은 고유값 $\\lambda_1,\\dots\\lambda_n$을 가지고 있다.\n",
+    "- 이 고유 벡터들은 다르다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03de0857-1a5a-4b06-9c38-51ff8957235e",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f123d65-d6a1-4d12-bb08-2a038a583af4",
+   "metadata": {},
+   "source": [
+    "##### ex1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "294792b4-4f64-423a-8939-76db3ce0ed09",
+   "metadata": {},
+   "source": [
+    "Eigenvectors $\\begin{bmatrix}{1}\\\\{0}\\end{bmatrix}$$\\begin{bmatrix}{1}\\\\{1}\\end{bmatrix}$ $\\begin{matrix}\\begin{bmatrix}{1}&{-1}\\\\{0}&{1}\\end{bmatrix}\\\\S^{-1}\\end{matrix}$ $\\begin{matrix}\\begin{bmatrix}{1}&{5}\\\\{0}&{6}\\end{bmatrix}\\\\A\\end{matrix}$$\\begin{matrix}\\begin{bmatrix}{1}&{1}\\\\{0}&{1}\\end{bmatrix}\\\\S\\end{matrix}$ = $\\begin{matrix}\\begin{bmatrix}{1}&{0}\\\\{0}&{6}\\end{bmatrix}\\\\ \\Lambda\\end{matrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f020e6b-f27f-421c-8df7-0d3a34173768",
+   "metadata": {},
+   "source": [
+    "$A=S\\Lambda S^{-1} \\rightarrow A^2=S \\Lambda S^{-1}S \\Lambda S^{-1} \\rightarrow \\text{ remove } S^{-1}S=I \\rightarrow S \\Lambda^2S^{-1}$\n",
+    "- The $k^{th}$ power will be $A^k = S \\Lambda^k S^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc56a8da-a9ed-4ce3-a1f0-d3d6a19ec66b",
+   "metadata": {},
+   "source": [
+    "**Remark**\n",
+    "1. 고유값 $\\lambda_1,\\dots\\lambda_n$는 다 달라서 자동으로 고유벡터 $x_1,\\dots,x_n$도 독립적이다. 반복죄지 않는 고유값을 가진 어느 행렬도 대각성화 할 수 없다.\n",
+    "2.어느 nonzero constats를 고유벡터에 곱할 수 있다.$Ax=\\lambda x$는 true로 남아있다.\n",
+    "3. S에서 고유벡터는 $\\Lambda$의 고유값에 따라 같은 정렬에 있다.(The eigenvectors in $S$ come in the same order as the eigenvalues in $\\Lambda$)\n",
+    "4.어떤 행렬이 너무 적은 고유벡터를 가지고 있으면 그 행렬은 대각선화할 수 없다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "747712fd-620b-4c4c-ba1f-2b4bff86ee5d",
+   "metadata": {},
+   "source": [
+    "> note: Remember that there is no connection between invertibility and diagonalizability; 1. Invertibility is concerened with the eigenvalues($\\lambda=0 \\text{ or } \\lambda \\neq 0$) 2. Diagonalizability is concerend with the eigenvectors(too few or enough for S)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c30cf7e2-00e8-42b1-a69a-469173a113b8",
+   "metadata": {},
+   "source": [
+    "> warning: Each eigenvalue has at least one eigenvector! $A - \\lambda I$ is singular. If $(A - \\lambda I)x = 0$ leads you to $x = 0$, $\\lambda$ is not an eigenvalue. Look for a mistake in solving $det(A - \\lambda I) = O$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb8d4f7d-77ff-488d-adeb-3d4be3d04dcd",
+   "metadata": {},
+   "source": [
+    "**n개의 람다들에 대해 고유벡터들은 독립적이다. 그러면 우리는 A를 대각화할 수 있다.**\n",
+    "\n",
+    "**Independent $x$ from differentt $\\lambda$**\n",
+    "- 구별되는 고유값들에 관련된 고유벡터 $x_1,\\dots,x_n$는 선형적으로 독립이다.\n",
+    "- n개의 다른 고유값들을(반복되지 않은 람다들) 가진 n by n 행렬은 대각화되어야만 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0b39a80-22ad-4614-8c9c-2297030e7e53",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55e4bf4-ef10-4c23-94e4-55c10224cf88",
+   "metadata": {},
+   "source": [
+    "##### ex2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b6b8d0f-7911-4cbe-a525-cbbf4463bf6d",
+   "metadata": {},
+   "source": [
+    "**Powers of A**\n",
+    "- A가 Markov matrix이면?\n",
+    "    - $A=S\\Lambda S^{-1}$에서 구한 고유벡터들은 S의 열 아넹 있고, $A^2$의 고유벡터이기도 함.\n",
+    "- $A^2$은 $S$와 같고, $A^2$ 고유벡터 행렬은 $\\Lambda^2$임을 보여보자.\n",
+    "    - SAME $S$ for $A^2$\n",
+    "        - $A^2 = S\\Lambda S^{-1}S\\Lambda S^{-1} = S\\Lambda^2 S^{-1}$\n",
+    "    - Powers of A\n",
+    "        - $A^k = S\\Lambda^k S^{-1}$\n",
+    "    - Limit $k \\rightarrow \\infty$\n",
+    "        - $A^{100}=S\\Lambda S^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6a61c7c-7dad-403d-b52f-61eafd902f61",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51fcf6c1-fe53-4d93-bb94-1d856b6e0312",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01366bca-b13c-44e6-9f80-c3eb826d17a2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4025249-89a0-4028-b127-7b793e2a911c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be67a8f9-22a5-4029-80cc-2013a84ac0c7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f143b78-afb9-4ed4-99d7-b7db5c5c4e9a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b49bfffd-5c2e-4d44-8850-057bf4cd6d24",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb893f53-128c-4159-ba35-44283d9d24f0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a0ecc8d-3bfd-4983-9198-a0d34cc1d06b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ed1205d-3b7c-4eb8-bdeb-6c89182ca9aa",
    "metadata": {},
    "source": []
   }
