--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -696,7 +696,7 @@
    "source": [
     "**Powers of A**\n",
     "- A가 Markov matrix이면?\n",
-    "    - $A=S\\Lambda S^{-1}$에서 구한 고유벡터들은 S의 열 아넹 있고, $A^2$의 고유벡터이기도 함.\n",
+    "    - $A=S\\Lambda S^{-1}$에서 구한 고유벡터들은 $S$의 열 안에 있고, $A^2$의 고유벡터이기도 함.\n",
     "- $A^2$은 $S$와 같고, $A^2$ 고유벡터 행렬은 $\\Lambda^2$임을 보여보자.\n",
     "    - SAME $S$ for $A^2$\n",
     "        - $A^2 = S\\Lambda S^{-1}S\\Lambda S^{-1} = S\\Lambda^2 S^{-1}$\n",
@@ -710,47 +710,230 @@
    "cell_type": "markdown",
    "id": "a6a61c7c-7dad-403d-b52f-61eafd902f61",
    "metadata": {},
-   "source": []
+   "source": [
+    "> note: Q: When does $A^k \\rightarrow zero$ matrix? A: All $|\\lambda|<1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "782d94b7-8014-48c4-bffe-7ed614667e1c",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "51fcf6c1-fe53-4d93-bb94-1d856b6e0312",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Fibonacci Numbers "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "01366bca-b13c-44e6-9f80-c3eb826d17a2",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Every new Fibonacci number is the sum of the two previous F's:**\n",
+    "- The sequence 0,1,1,2,3,5,8,13,... comes from $F_{k+2}=F_{k+1}+F_{k}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c4025249-89a0-4028-b127-7b793e2a911c",
    "metadata": {},
-   "source": []
+   "source": [
+    "**step 1**: 일단 matrix equation $u_{k+1}=Au_k$으로 시작!\n",
+    "- Let $u_k=\\begin{bmatrix}{F_{k+1}}\\\\{F_k}\\end{bmatrix} $. The rule $\\begin{matrix}{F_{k+2}=F_{k+1}+F_k}\\\\{F_{k+1}=F_{k+1}}\\end{matrix}$ is $u_{k+1} = \\begin{bmatrix}{1}&{1}\\\\{1}&{0}\\end{bmatrix}u_k$\n",
+    "\n",
+    "\n",
+    "Every step multiples by $A= \\begin{bmatrix}{1}&{1}\\\\{1}&{0}\\end{bmatrix}$.\n",
+    "- 100번하면 $u_{100}=A^{100}u_k$가 된다.\n",
+    "- Subtract $\\lambda$ from the diagonal of A:\n",
+    "    - $A-\\lambda I =  \\begin{bmatrix}{1-\\lambda}&{1}\\\\{1}&{-\\lambda}\\end{bmatrix}$ leads to $det(A-\\lambda I)=\\lambda^2 - \\lambda - 1$\n",
+    "    - $-b\\pm sqrt(b^2-4ac)/2a$ 으로 해를 구할 수 있지\n",
+    "    - Eigenvalues $\\lambda_1=\\frac{1+\\sqrt{5}}{2} \\approx 1.618$ and $\\lambda_2=\\frac{1-\\sqrt{5}}{2} \\approx -.618$\n",
+    "    - Eigenvalues로 Eigenvectors를 구해보자. $x_1=(\\lambda_1,1)$ and $x_2=(\\lambda_2,1)$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "be67a8f9-22a5-4029-80cc-2013a84ac0c7",
    "metadata": {},
-   "source": []
+   "source": [
+    "**step 2**: Find the combination of those eigenvectors that gives $u_0=(1,0)$\n",
+    "- $\\begin{bmatrix} {1}\\\\{0} \\end{bmatrix} = \\frac{1}{\\lambda_1-\\lambda_2} \\bigg( \\begin{bmatrix}{\\lambda_1}\\\\{1} \\end{bmatrix} - \\begin{bmatrix}{\\lambda_2}\\\\{1} \\end{bmatrix} \\bigg)$  or $u_0=\\frac{x_1-x_2}{\\lambda_1-\\lambda_2}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6f143b78-afb9-4ed4-99d7-b7db5c5c4e9a",
    "metadata": {},
-   "source": []
+   "source": [
+    "**step 3**: multiplies $u_0$ by $A^{100}$ to find $u_{100}$\n",
+    "- 100 steps from $u_0$ $u_{100}=\\frac{(\\lambda_1)^{100}x_1-(\\lambda_2)^{100}x_2}{\\lambda_1-\\lambda_2}$\n",
+    "- 우리는 $F_{100}= \\text{ second componets of } u_{100}$ 를 원해\n",
+    "- $x_1$과 $x_2$의 second component는 1이야\n",
+    "- ${\\lambda_1-\\lambda_2}$은 $\\sqrt{5}$\n",
+    "- 결국 $F_{100}=\\frac{1}{\\sqrt{5}}\\bigg[\\bigg(\\frac{1+\\sqrt{5}}{2} \\bigg)^{100} - \\bigg(\\frac{1-\\sqrt{5}}{2} \\bigg)^{100}\\bigg] \\approx 3.54\\cdot10^{20}$\n",
+    "- The fractions and square roots must disappear, because Fibonacci's rule $F_{k+2} = F_{k+l} + F_k$ stays with integers\n",
+    "- k번째 피보나치 수=$\\frac{\\lambda_{1}^{k}-\\lambda_{2}^{k}}{\\lambda_1-\\lambda_2}$ = 가장 가까운 상수는 $\\frac{1}{\\sqrt{5}}\\bigg(\\frac{1+\\sqrt{5}}{2} \\bigg)^{k}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b49bfffd-5c2e-4d44-8850-057bf4cd6d24",
    "metadata": {},
-   "source": []
+   "source": [
+    "**The ratio FlOd F100 must be very close to the limiting ratio (I + 0) /2. The Greeks called this number the \"golden mean\".**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be98b440-daae-46b4-8f82-4dd2f327d9c6",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "cb893f53-128c-4159-ba35-44283d9d24f0",
+   "metadata": {},
+   "source": [
+    "### Matrix Powers $A^k$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e355437-c9c6-47ee-ac82-9b48c2ba8ca3",
+   "metadata": {},
+   "source": [
+    "Power of A: $A^KU_0 = (S\\Lambda  S^{-1})\\dots(S\\Lambda  S^{-1})u_0=S\\Lambda^k  S^{-1}u_0$\n",
+    "1. **Write $u_0$ as a combination $c_1x_1+\\dots+c_nx_n$ of the eigenvectors.**\n",
+    "2. **Multuply eaxh eigenvector $x_i$ by $(\\lambda_i)^k$**\n",
+    "3. **Add up the pieces $c_i(\\lambda_i)^kx_i$ to find the solution $u_k=A^ku_0$**\n",
+    "\n",
+    "- Solution for $u_{k+1}=Au_k$ $u_k=A^ku_0=c_1(\\lambda_1)^kx_1+\\dots+c_n(\\lambda_n)^kx_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d1e913-446f-45df-ae7e-3b57129e75a4",
+   "metadata": {},
+   "source": [
+    "the eigenvectors in S lead to the c's in the combination $u_0=c_1x_1+\\dots+c_nx_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f97a433-209b-48dd-9bf2-43c3126d37c7",
+   "metadata": {},
+   "source": [
+    "**step 1**\n",
+    "- $u_0= \\begin{bmatrix}{}\\\\ {x_1} & {\\dots} & {x_n}\\\\{} \\end{bmatrix}\\begin{bmatrix}{c_1}\\\\{\\vdots}\\\\{c_n} \\end{bmatrix}$. This says that $u_0=Sc$\n",
+    "- 상관계수는 $c=S^{-1}U_0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f69c129-8efa-4526-91ae-46fc90dd6fb0",
+   "metadata": {},
+   "source": [
+    "**step 2**\n",
+    "- Multiply by $\\Lambda^k$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81ba76a1-b1ae-41da-96a3-b42678ee81b8",
+   "metadata": {},
+   "source": [
+    "**step 3**\n",
+    "- the final result $u_k=\\sum c_i(\\lambda_i)^kx_i$is the product of S and $\\Lambda^k$ and $S^{-1}u_0$\n",
+    "- $A^ku_0 = S\\Lambda^kS^{-1}u_0 = S\\Lambda^kc = \\begin{bmatrix}{}&{}&{}\\\\{x_1} & {\\dots}&{x_n}\\\\{}&{}&{}\\end{bmatrix} \\begin{bmatrix}{(\\lambda_1)^k}&{}&{}\\\\{}&{\\ddots}&{}\\\\{}&{}&{(\\lambda_n)^k}\\end{bmatrix} \\begin{bmatrix}{c_1}\\\\{\\vdots}\\\\{c_n}\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e11bc4-81d1-4695-a115-1030a4f631c1",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73929a27-2e36-44e2-acfa-302e2c0651d9",
+   "metadata": {},
+   "source": [
+    "##### ex 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4572de88-1946-463b-b482-9fe574eed3d8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c50a9516-09f9-44ac-93c4-70fb1b66360e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce4c376c-20f4-4a19-9db4-da0a48868e96",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed74039b-7549-43be-98f6-03d4a63ead5d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39518b50-f285-488a-a8bb-83ba9098bc8e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ca656d-f7e4-4680-a88a-b1728fade5aa",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3941619a-892d-4a69-ae18-14d9d8cea205",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c75f79b-f2bf-4b15-97ec-03957ce90347",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55600fcd-d9ea-48cd-836d-0c0f5afae879",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "337e699a-7fcf-4222-ae21-c097d813a06e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c4f740-d258-4757-bd94-2c87ec989547",
    "metadata": {},
    "source": []
   },
@@ -758,13 +941,17 @@
    "cell_type": "markdown",
    "id": "4a0ecc8d-3bfd-4983-9198-a0d34cc1d06b",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Gilbert Strang 강의영상...!."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6ed1205d-3b7c-4eb8-bdeb-6c89182ca9aa",
    "metadata": {},
-   "source": []
+   "source": [
+    "> youtube: https://www.youtube.com/watch?v=ZK3O402wf1c&list=PL49CF3715CB9EF31D&index=1"
+   ]
   }
  ],
  "metadata": {
