--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -875,65 +875,287 @@
    "cell_type": "markdown",
    "id": "4572de88-1946-463b-b482-9fe574eed3d8",
    "metadata": {},
-   "source": []
+   "source": [
+    "고유벡터와 고유값을 가진 S와 람다집합일때, $A^Ku_0$를 계산해보자."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c50a9516-09f9-44ac-93c4-70fb1b66360e",
    "metadata": {},
-   "source": []
+   "source": [
+    "- $u_0=(1,0)$\n",
+    "- $A=\\begin{bmatrix}{1}&{2}\\\\{1}&{0}\\end{bmatrix} \\text{ has } \\lambda_1=2 \\text{ and } x_1=\\begin{bmatrix}{2}\\\\{1}\\end{bmatrix}$\n",
+    "- $\\lambda_2=-1 \\text{ and } x_2=\\begin{bmatrix}{1}\\\\{-1}\\end{bmatrix}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ce4c376c-20f4-4a19-9db4-da0a48868e96",
    "metadata": {},
-   "source": []
+   "source": [
+    "Solution in three steps: $u_0=c_1x_1+c_2x_2$를 찾고 $u_k=c_1(\\lambda_1)^kx_1+c_2(\\lambda_2)^kx_2$도 찾자\n",
+    "- **step 1** $u_0=\\begin{bmatrix}{1}\\\\{0}\\end{bmatrix} = \\frac{1}{3}\\begin{bmatrix}{2}\\\\{1}\\end{bmatrix} + \\frac{1}{3}\\begin{bmatrix}{1}\\\\{-1}\\end{bmatrix} \\text{ so } c_1 = c_2=\\frac{1}{3}$\n",
+    "- **step 2** Multiply the two parts by $(\\lambda_1)^k=2^k \\text{ and } (\\lambda_2)^k=(-1)^k$\n",
+    "- **step 3** Combine eigenvectors $c_1(\\lambda_1)^kx_1 \\text{ and }c_2(\\lambda_2)^kx_2 \\text{ into } u_k $\n",
+    "    - $u_k=A^ku_0$ $u_k=\\frac{1}{3}2^k\\begin{bmatrix}{2}\\\\{1}\\end{bmatrix}+\\frac{1}{3}(-1)^k\\begin{bmatrix}{1}\\\\{-1}\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a014852-baff-4dcb-9e5d-698da4815807",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ed74039b-7549-43be-98f6-03d4a63ead5d",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Nondiagonalizable Matrices (Optional)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "39518b50-f285-488a-a8bb-83ba9098bc8e",
    "metadata": {},
-   "source": []
+   "source": [
+    "람다가 A의 고유값일때 우리는 두가지를 알아냈지\n",
+    "1. 기하학적으로 고유벡터; 0이 아닌nonzero 해결책은 $Ax=\\lambda x$\n",
+    "2. 대수로 고유값; $A-\\lambda I $의 determinant는 0이야."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "85ca656d-f7e4-4680-a88a-b1728fade5aa",
    "metadata": {},
-   "source": []
+   "source": [
+    "For exceptional matrices, an eigenvalue can be repeated. Then there are two different ways to count its multiplicity. Always OM < AM for each A: 고유값들이 반복되는 예외적인 경우에 중복도(?)를 세는 두가지 다른 방법이 있다.\n",
+    "1. 기하학적 중복도 Geomatric Multiplicity=GM\n",
+    "    - $\\lambda$에서 독립적인 고유벡터를 센다.이건 $A-\\lambda I$의 nullspace의 차원이다.\n",
+    "2. 대수적 중복도 Algebraic Multiplicity=AM\n",
+    "    - 고유값을 사용한 $\\lambda$의 반복을 센다. $det(A-\\lambda I)=0$의 n개의 근을 본다.\n",
+    "\n",
+    "\n",
+    "$\\lambda=4,4,4$이면 GM은 3이고 AM은 1 또는 2 또는 3임!!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "3941619a-892d-4a69-ae18-14d9d8cea205",
    "metadata": {},
-   "source": []
+   "source": [
+    "> warning: AM=2, GM=1 일때, 고유값은 2개인데 고유벡터가 1개인 경우가 있다. 이는 A가 대각선화 할 수 없은AM평균 아래에 있을때 고유벡터의 단점이다.(?)When repeats = [1 1. .. 1] we know that the n eigenvalues are \n",
+    "all different and A is diagonalizable."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1c75f79b-f2bf-4b15-97ec-03957ce90347",
    "metadata": {},
-   "source": []
+   "source": [
+    "- When repeats = [1 1. .. 1] we know that the n eigenvalues are all different and A is diagonalizable.\n",
+    "    - The sum of all components in \"repeats\" is always n, because every nth degree equation $det(A - \\lambda I) = 0$ has n roots (counting repetitions). The sum of all components in \"repeats\" is always $n$, because every $n^{th}$ degree equation $det(A - \\lambda I) = 0$ has $n$ roots (counting repetitions). \n",
+    "- The total number of independent eigenvectors might be less than n. Then A is not diagonalizable."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "55600fcd-d9ea-48cd-836d-0c0f5afae879",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Eigenvalues of A B and A + B "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "337e699a-7fcf-4222-ae21-c097d813a06e",
    "metadata": {},
-   "source": []
+   "source": [
+    "An eigenvalue $\\lambda$ of A times an eigenvalue $\\beta$ of B usually does not give an eigenvalue of AB: "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "95c4f740-d258-4757-bd94-2c87ec989547",
+   "metadata": {},
+   "source": [
+    "**False proof**: $ABx = A\\beta x = \\beta A x = \\beta \\lambda x$.\n",
+    "- 이건 베타를 곱한 람다가 고유값처럼 보인다.\n",
+    "- x가 A,B의 고유벡터일때 이는 옳은 증명이다.\n",
+    "- 하지만 항상 그렇지는 않지!\n",
+    "- A의 고유벡터들은 일반적으로 B의 고유벡터들이 아니다.\n",
+    "- 1이 AB의 고유값일때, A,B는 모두 0 고유값을 가질 수 있다.\n",
+    "- 이 때문에 A+B의 고유값은 일반적으로 $\\lambda+\\beta$가 아니다.\n",
+    "- 이 잘못된 증명은 위 사실을 보인다.\n",
+    "- x가 진짜 A,B 모두의 고유벡터라면, $ABx=\\lambda \\beta x$와 $BAx= \\beta \\lambda x$가 나와야 한다.\n",
+    "- n개의 고유벡터가 공유된다면 고유값들을 곱할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dddb8da2-a067-4180-929b-f070b75d816d",
+   "metadata": {},
+   "source": [
+    "> note: Commuting matrics share eigenvectpors: A와 B가 대각화할 수 있다고 가정할떄 $AB=BA$일 경우에만 같은 고유벡터 행렬 S가 공유된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf029d1a-6405-46e4-a980-48c4319cfc63",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f384f2aa-09a5-41bf-b90c-e970581ed6e2",
+   "metadata": {},
+   "source": [
+    "***REVIEW OF THE KEY IDEAS***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c32cf236-f523-4060-9553-67920188dd67",
+   "metadata": {},
+   "source": [
+    "1. If $A$ has $n$ independent eigenvectors $x_1 \\dots x_n$, they go into the columns of $S$. \n",
+    "- **$A$ is diagonalized by $S$** $S^{-1}AS = \\Lambda$ and $A = S\\Lambda S^{-1}$.\n",
+    "2. The powers of $A$ are $A^k = S\\Lambda^kS^{-1}$. The eigenvectors in $S$ are unchanged.\n",
+    "3. The eigenvalues of $A^k$ are $(\\lambda_1)^k, ... , (\\lambda_n)^k$ in the matrix $\\Lambda^k$. \n",
+    "4. The solution to $u_{k+l} = Au_k$ starting from $u_0$ is $u_k = A^ku_0 = S\\Lambda^kS^{-1}u_0$:\n",
+    "- $u_k=c_1(\\lambda_1)^kx_1+\\dots+c_n(\\lambda_n)^kx_n$ provided $u_0 = c_1x_1 + c_nx_n$\n",
+    "- That shows Steps 1,2,3 ($c$'s from $S^{-1} u_O , \\lambda^k$ from $\\Lambda^k$, and $x$'s from $S$)\n",
+    "5. A is diagonalizable if every eigenvalue has enough eigenvectors (GM = AM). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4524cb60-cd85-4bd4-8d41-1efb3468cd83",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a6f0448-dd60-478d-bfd6-c0cc08d9588b",
+   "metadata": {},
+   "source": [
+    "*** WORKED EXAMPLES***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99af73ad-91f7-4af2-9b65-23e80a0f39bf",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e04c780-58a7-4963-8e59-2a882a4db961",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "816f9fb6-53f5-4ce9-8abf-d06142a34906",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c8643c7-36f6-4239-b0bd-ed5ed2d3a3a4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f69025-aea9-4c6d-a427-f345efeda3d3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b7014f6-43fa-44f2-9a98-ece791523b93",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b06706-4ae2-485e-bdb6-944118db5b58",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8009bfe2-bfc3-4a8b-841f-451f58f60949",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a08258-74b1-4073-b879-e1d4def80fb8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b93d077e-6adc-4870-8cea-6817a2f86ba3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30abe539-f66c-4351-8103-fdf5f8fe192c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260f287b-4d1a-48f2-ad92-75c787cec543",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e7516f-cfb0-4c12-a451-6d38d5f473f8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96830b3-06b4-46d3-a355-77299246ccf0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c861e9-863d-4f1d-b881-2cf8e7faaf1d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d148a47c-fade-472d-b3db-d28c7455c2b0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57de8479-d4b5-4225-bf5b-b0b86de5fca6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fadb97f-c482-420b-a329-59c1219f5d47",
    "metadata": {},
    "source": []
   },
